[project]
name = "sesame-tk-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiosqlite>=0.21.0",
    "annotated-types==0.7.0",
    "anyio==4.10.0",
    "arrow==1.3.0",
    "asyncmy==0.2.10",
    "binaryornot==0.4.4",
    "cashews==7.4.1",
    "certifi==2025.8.3",
    "cffi==1.17.1",
    "chardet==5.2.0",
    "charset-normalizer==3.4.3",
    "click==8.2.1",
    "colorama==0.4.6",
    "cookiecutter==2.6.0",
    "cryptography==45.0.6",
    "distlib==0.4.0",
    "exceptiongroup==1.3.0",
    "fastapi==0.116.1",
    "filelock==3.19.1",
    "greenlet==3.2.4",
    "h11==0.16.0",
    "httpcore==1.0.9",
    "httpx==0.28.1",
    "idna==3.10",
    "jinja2==3.1.6",
    "loguru==0.7.3",
    "markdown-it-py==4.0.0",
    "markupsafe==3.0.2",
    "mdurl==0.1.2",
    "msgpack==1.1.1",
    "multidict==6.6.4",
    "nb-cli==1.4.2",
    "nonebot-adapter-onebot==2.4.6",
    "nonebot-adapter-telegram==0.1.0b20",
    "nonebot2==2.4.3",
    "noneprompt==0.1.9",
    "pip==25.2",
    "platformdirs==4.4.0",
    "prompt-toolkit==3.0.51",
    "propcache==0.3.2",
    "pycparser==2.22",
    "pydantic==2.11.7",
    "pydantic-core==2.33.2",
    "pyfiglet==1.0.4",
    "pygments==2.19.2",
    "pygtrie==2.5.0",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.1.1",
    "python-slugify==8.0.4",
    "pyyaml==6.0.2",
    "requests==2.32.5",
    "rich==14.1.0",
    "six==1.17.0",
    "sniffio==1.3.1",
    "sqlalchemy==2.0.43",
    "sqlmodel>=0.0.24",
    "starlette==0.47.3",
    "text-unidecode==1.3",
    "tomlkit==0.13.3",
    "types-python-dateutil==2.9.0.20250822",
    "typing-extensions==4.15.0",
    "typing-inspection==0.4.1",
    "urllib3==2.5.0",
    "uvicorn==0.35.0",
    "virtualenv==20.34.0",
    "watchfiles==0.24.0",
    "wcwidth==0.2.13",
    "win32-setctime==1.2.0",
    "yarl==1.20.1",
]

[[tool.uv.index]]
# url = "https://mirrors.tuna.tsinghua.edu.cn/pypi/web/simple/"
url = "https://mirrors.aliyun.com/pypi/simple"

[tool.nonebot]
adapters = [
    { name = "OneBot V12", module_name = "nonebot.adapters.onebot.v12" },
    { name = "Telegram", module_name = "nonebot.adapters.telegram" },
    {name = "OneBot V11", module_name = "nonebot.adapters.onebot.v11"}
]
plugins = []
plugin_dirs = ["src/plugins"]
builtin_plugins = ["echo"]
